# RepoDoctor

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  PUBLISHING.md  README.md  pyproject.toml  pytest.ini
.github/: markdown-link-check.json
.github/workflows/: ci.yml  dependencies.yml  docs.yml  release.yml
src/repodoc/: __init__.py  cli.py
src/repodoc/commands/: __init__.py  base.py  deadcode.py  diet.py  docker.py  report.py  scan.py  tour.py
src/repodoc/core/: __init__.py  copilot.py  exceptions.py  logger.py  parser.py
src/repodoc/prompts/: __init__.py  templates.py
src/repodoc/prompts/v1/: deadcode.txt  diet.txt  docker.txt  report.txt  scan.txt  tour.txt
src/repodoc/renderers/: __init__.py  base.py  command_renderers.py  json_renderer.py  terminal_renderer.py
src/repodoc/schemas/: __init__.py  base.py  deadcode.py  diet.py  docker.py  report.py  scan.py  tour.py
tests/: conftest.py  test_copilot.py  test_diet_command.py  test_exceptions.py  test_parser.py  test_prompts.py  test_schemas.py
